Fix admin route

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -108,7 +108,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="{{ path('easy_admin_bundle') }}">
+                    <a href="{{ path('easyadmin') }}">
                       Dashboard
                     </a>
                   </li>
