bolder in blog page

--- a/app/Resources/assets/css/dakota.css
+++ b/app/Resources/assets/css/dakota.css
@@ -484,6 +484,10 @@ input.search:focus{
     outline: 0;
 }
 
+.page-header.blog-title b{
+    font-weight: bolder;
+}
+
 
 /*.small-profile-picture {
     display: inline-block;
