--- a/app/Resources/assets/concatenated/base-concatenated.css
+++ b/app/Resources/assets/concatenated/base-concatenated.css
@@ -12066,6 +12066,10 @@ input.search:focus{
     outline: 0;
 }
 
+.page-header.blog-title b{
+    font-weight: bolder;
+}
+
 
 /*.small-profile-picture {
     display: inline-block;
