delete og:image tag

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,8 +29,7 @@
   <meta property="og:description" content="Web Maytok. Encuentra aquí los libros Valonde, NeoParis y Titán. Suscríbete para tener las últimas noticias y novedades" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Maytok" />
-  <meta property="og:url" content="http://www.maytok.com/" />
-  <meta property="og:image" content="http://i.imgur.com/50dTPQa.jpg" />
+  <meta property="og:url" content="https://www.maytok.com/" />
 
   {# ICONS #}
   <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon.png') }}">
