Changed order of metas on base.html.twig

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,10 +16,12 @@
 
 
 <html class="no-js" lang="es" data-cursor="ec008c">
-<head>  
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width">
+<head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MAYTOK | Valonde - NeoParis - Titán</title>
+
   <meta name="description" content="Web Maytok. Encuentra aquí los libros Valonde, Radha y Titán. Suscríbete para tener las últimas noticias y novedades">
   <link rel="icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
   <link rel="publisher" href="https://plus.google.com/+GiancarloVenturaGranados">
@@ -36,9 +38,6 @@
   <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('apple-touch-icon-57x57.png') }}">
   <link rel="apple-touch-icon" sizes="114x114" href="{{ asset('apple-touch-icon-114x114.png') }}">
   <link rel="apple-touch-icon" sizes="72x72" href="{{ asset('apple-touch-icon-72x72.png') }}">
-  <link rel="shortcut icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
-
-  <title>MAYTOK | Valonde - NeoParis - Titán</title>
 
   {# Stylesheets #}
   {% block stylesheets %}
