Updated medium assets

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -155,7 +155,7 @@
       <div class="four large-4 columns">
         <h3>Acerca de Maytok</h3>
         <p>
-          Serie planeada de 13 libros interactivos. Por ahora sólo disponibles los dos primeros. 
+          ¿Quieres saber de qué va el proyecto? Entérate de <a href="/blog/post/142049679800/aqu%C3%AD-vamos/">todos los pormenores</a>
         </p>
         <div class="social">
           <a title="Facebook" class="facebook" href="https://www.facebook.com/GensSakya"><i class="fa fa-facebook"></i></a>
