Added margin top to figure in blog page

--- a/app/Resources/assets/css/dakota.css
+++ b/app/Resources/assets/css/dakota.css
@@ -490,6 +490,7 @@ input.search:focus{
 
 .tmblr-full{
     text-align: center;
+    margin-top: 29px;
 }
 /*.small-profile-picture {
     display: inline-block;
