--- a/app/Resources/assets/concatenated/base-concatenated.css
+++ b/app/Resources/assets/concatenated/base-concatenated.css
@@ -12070,7 +12070,10 @@ input.search:focus{
     font-weight: bolder;
 }
 
-
+.tmblr-full{
+    text-align: center;
+    margin-top: 29px;
+}
 /*.small-profile-picture {
     display: inline-block;
     vertical-align: middle;
