Rebase four commits
Update show_content.html.twig

Update show_content.html.twig

Update show_content.html.twig

--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<div class="fos_user_user_show">
-    <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
-    <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+<div class="fos_user_user_show" style="margin:20px 10px 10px 10px; background: #18191b; color: white;">
+    <p style="font:sans-serif; font-size:24px; color: white; padding-bottom:5px;"><strong>{{ 'profile.show.username'|trans }}: {{ user.username }}</strong></p>
+    <p style="font:sans-serif; font-size:24px; color: white; padding-bottom:5px;"><strong>{{ 'profile.show.email'|trans }}: {{ user.email }}</strong></p>
 </div>
