--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -2,5 +2,5 @@
 
 <div class="fos_user_user_show">
     <p style="font:sans-serif; font-size:24px;><strong>{{ 'profile.show.username'|trans }}: {{ user.username }}</strong></p>
-    <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+    <p style="font:sans-serif; font-size:24px;><strong>{{ 'profile.show.email'|trans }}: {{ user.email }}</strong></p>
 </div>
