FIX development route

--- a/app/Resources/views/Writer/notepad.html.twig
+++ b/app/Resources/views/Writer/notepad.html.twig
@@ -122,7 +122,7 @@
 	    		function(){
 	    			var content = document.getElementById('sk-content').innerHTML;
 	    			var http = new XMLHttpRequest();
-	    			var url = "/app_dev.php/stelios/draft/write";
+	    			var url = "/stelios/draft/write";
 	    			var params = "content=" + content;
 	    			http.open("POST", url, true);
 
